# dynamic_hypno_generator

./: .gitignore  .python-version  README.md  config.json  lines.txt  main.py  pyproject.toml  requirements.txt  ruff.toml  ty.toml
import/settings/: default.json
src/: config.py  filepath_queue.py  hypno_line.py  hypno_queue.py  log.py  shared.py  utils.py
src/audio/: line_player.py  repeating_player.py  speech.py  tts.py
src/audio/speech/: speech.py
src/audio/speech/macos_override/: driver.py
src/filepath_generators/: text_based.py
tests/: test_hypno_queue.py
