[project]
name = "dynamic-hypno-generator"
version = "0.1.0"
description = "Dynamically generate repeating hypnosis audio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pedalboard>=0.9.17",
    "pydantic>=2.11.7",
    "pyttsx3>=2.99",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.4",
]

[tool.uv.sources]
pedalboard = { git = "https://github.com/spotify/pedalboard", marker = "sys_platform == 'win_amd64'" }
