[project]
name = "dynamic-hypno-generator"
version = "0.1.11"
description = "A program that dynamically generates repeating hypnosis audio, complete with sound effects and multi-layered audio, using text-to-speech."
authors = [
  {name = "s10boi"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pedalboard>=0.9.16 ; sys_platform != 'win32'",
    "pedalboard>=0.9.16,!=0.9.17 ; sys_platform == 'win32'",
    "pydantic>=2.11.7",
    "pyttsx3>=2.99",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.3.2",
    "ruff>=0.6.4",
    "ty>=0.0.3",
]
